--- a/SmartParking/app/src/main/res/values/strings.xml
+++ b/SmartParking/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
 
     <string name="action_settings">Settings</string>
 
-    <string name="stopRoute">End route</string>
+    <string name="stopRoute">cancelar rota</string>
 
     <string name="hint_search">search</string>
 </resources>
